Fixed basket page and checkout reactiveness
